--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -83,18 +83,22 @@
             android:id="@+id/search"
             android:layout_width="match_parent"
             android:layout_height="46dp"
-            android:layout_marginStart="20dp"
-            android:layout_marginTop="20dp"
-            android:layout_marginEnd="20dp"
-            android:layout_marginBottom="10dp"
+            android:layout_marginStart="15dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginEnd="15dp"
             android:background="@drawable/search_box"
-            android:elevation="1dp"
-            android:fontFamily="sans-serif"
-            android:hint="Search...."
+            android:drawableStart="@drawable/ic_search"
+            android:drawableEnd="@drawable/ic_settings"
+            android:drawablePadding="20dp"
+            android:drawableTint="@color/unselected"
+            android:elevation="2dp"
+            android:fontFamily="@font/inter_regular"
+            android:hint="Search"
             android:imeOptions="actionGo"
             android:inputType="text"
-            android:paddingStart="19dp"
-            android:paddingRight="100dp"
+            android:paddingStart="20dp"
+            android:paddingEnd="20dp"
+            android:textAlignment="textStart"
             android:textColorHint="#757575"
             android:textSize="16sp" />
 
