--- a/app/src/main/res/layout/fragment_collection.xml
+++ b/app/src/main/res/layout/fragment_collection.xml
@@ -38,6 +38,17 @@
             android:textSize="22sp"
             android:textAllCaps="false"
             android:layout_marginStart="5dp"/>
+
+            <ImageButton
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/ic_search"
+                android:background="@color/transparent"
+                android:layout_alignParentEnd="true"
+                android:padding="12dp"
+                android:layout_marginEnd="10dp"/>
+
+
     </RelativeLayout>
 
 
