--- a/app/src/main/res/layout/fragment_discover.xml
+++ b/app/src/main/res/layout/fragment_discover.xml
@@ -9,7 +9,9 @@
 
     <RelativeLayout
         android:id="@+id/buttonTab"
-        android:layout_margin="10dp"
+        android:layout_marginStart="10dp"
+        android:layout_marginEnd="10dp"
+        android:layout_marginTop="10dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
@@ -36,6 +38,16 @@
             android:textSize="22sp"
             android:textAllCaps="false"
             android:layout_marginStart="5dp"/>
+
+        <ImageButton
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/ic_search"
+            android:background="@color/transparent"
+            android:layout_alignParentEnd="true"
+            android:padding="12dp"
+            android:layout_marginEnd="10dp"/>
+
     </RelativeLayout>
 
 
