--- a/app/src/main/res/layout/fragment_movie_progress.xml
+++ b/app/src/main/res/layout/fragment_movie_progress.xml
@@ -21,7 +21,7 @@
     <!-- TODO: Update blank fragment layout -->
     <com.google.android.material.appbar.AppBarLayout
         android:id="@+id/appBarLayout"
-        style="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
+        android:background="@color/page_background"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_constraintEnd_toEndOf="parent"
@@ -31,13 +31,19 @@
 
         <com.google.android.material.tabs.TabLayout
             android:id="@+id/tabLayout"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="@color/page_background"
-            app:tabIndicatorColor="@color/white"
-            app:tabIndicatorHeight="2dp"
+            app:tabIndicatorColor="@color/red"
+            app:tabIndicatorHeight="1dp"
             app:tabMode="fixed"
-            app:tabTextColor="@color/selected">
+            app:tabTextColor="@color/unselected"
+            app:tabSelectedTextColor="@color/selected"
+            app:tabTextAppearance="@style/MineCustomTabText"
+            app:tabIndicatorFullWidth="false"
+            android:clipToPadding="false"
+            android:paddingStart="5dp"
+            android:paddingEnd="5dp">
 
         </com.google.android.material.tabs.TabLayout>
 
