--- a/app/src/main/res/layout/fragment_hidden_progress.xml
+++ b/app/src/main/res/layout/fragment_hidden_progress.xml
@@ -7,16 +7,58 @@
     android:background="@color/page_background">
 
 
-    <TextView
-        android:id="@+id/textView2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hidden progress"
-        android:textColor="@color/white"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.5" />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/ll_layout"
+        android:orientation="vertical"
+        android:padding="20dp">
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Progress"
+            android:textColor="@color/selected"
+            android:textSize="20sp"
+            android:fontFamily="@font/inter_semibold"
+            android:layout_marginTop="200dp"/>
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Your Show in currently empty"
+            android:textColor="@color/unselected"
+            android:textSize="14sp"
+            android:fontFamily="@font/inter_medium"
+            android:layout_marginTop="5dp"/>
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Visit Explore tab to add shows or import your collection"
+            android:textColor="@color/unselected"
+            android:textSize="14sp"
+            android:fontFamily="@font/inter_regular"
+            android:layout_marginTop="10dp"/>
+
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="35dp"
+            android:background="@drawable/button_small"
+            android:layout_marginTop="20dp"
+            android:text="Explore"
+            android:textColor="@color/white"/>
+
+
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="35dp"
+            android:background="@color/transparent"
+            android:layout_marginTop="20dp"
+            android:text="Import from Phone stroge"
+            android:textSize="14sp"
+            android:textColor="@color/selected"/>
+
+    </LinearLayout>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
