--- a/app/src/main/res/layout/fragment_my__shows.xml
+++ b/app/src/main/res/layout/fragment_my__shows.xml
@@ -13,12 +13,12 @@
         android:layout_height="match_parent"
         android:id="@+id/ll_layout"
         android:orientation="vertical"
-        android:padding="20dp">
+        android:padding="30dp">
 
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Progress"
+            android:text="Download Shows"
             android:textColor="@color/selected"
             android:textSize="20sp"
             android:fontFamily="@font/inter_semibold"
@@ -27,38 +27,23 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Your Show in currently empty"
-            android:textColor="@color/selected"
+            android:text="Your Download Shows in currently empty"
+            android:textColor="@color/unselected"
             android:textSize="14sp"
-            android:fontFamily="@font/inter_regular"
-            android:layout_marginTop="10dp"/>
+            android:fontFamily="@font/inter_medium"
+            android:layout_marginTop="5dp"/>
 
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Visit Discover tab to add shows or import your collection"
-            android:textColor="@color/selected"
+            android:text="Downloads Shows items will no longer appear in Explore, Progress and other sections."
+            android:textColor="@color/unselected"
             android:textSize="14sp"
-            android:fontFamily="@font/inter_semibold"
-            android:layout_marginTop="5dp"/>
-
-        <Button
-            android:layout_width="match_parent"
-            android:layout_height="35dp"
-            android:background="@drawable/button_small"
-            android:layout_marginTop="20dp"
-            android:text="Discover Shows"
-            android:textColor="@color/white"/>
+            android:fontFamily="@font/inter_regular"
+            android:layout_marginTop="10dp"/>
 
 
-        <Button
-            android:layout_width="match_parent"
-            android:layout_height="35dp"
-            android:background="@color/transparent"
-            android:layout_marginTop="20dp"
-            android:text="Import from Phone stroge"
-            android:textSize="14sp"
-            android:textColor="@color/selected"/>
+
 
     </LinearLayout>
 
