--- a/app/src/main/res/layout/fragment_watchlist_progress.xml
+++ b/app/src/main/res/layout/fragment_watchlist_progress.xml
@@ -7,16 +7,32 @@
     android:background="@color/page_background">
 
 
-    <TextView
-        android:id="@+id/textView2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Watchlist movie"
-        android:textColor="@color/white"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.5" />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/ll_layout"
+        android:orientation="vertical"
+        android:padding="20dp">
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="CALENDAR"
+            android:textColor="@color/selected"
+            android:textSize="20sp"
+            android:fontFamily="@font/inter_semibold"
+            android:layout_marginTop="200dp"
+            android:layout_marginStart="50dp"/>
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="There are no episodes on the way "
+            android:textColor="@color/unselected"
+            android:textSize="14sp"
+            android:fontFamily="@font/inter_medium"
+            android:layout_marginTop="5dp"
+            android:layout_marginStart="50dp"/>
+
+    </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
