--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -88,7 +88,6 @@
             android:layout_marginEnd="15dp"
             android:background="@drawable/search_box"
             android:drawableStart="@drawable/ic_search"
-            android:drawableEnd="@drawable/ic_settings"
             android:drawablePadding="20dp"
             android:drawableTint="@color/unselected"
             android:elevation="2dp"
@@ -99,8 +98,19 @@
             android:paddingStart="20dp"
             android:paddingEnd="20dp"
             android:textAlignment="textStart"
+            android:layout_toStartOf="@id/settings"
             android:textColorHint="#757575"
             android:textSize="16sp" />
+
+        <Button
+            android:id="@+id/settings"
+            android:layout_width="25dp"
+            android:layout_height="25dp"
+            android:layout_alignParentEnd="true"
+            android:layout_marginTop="20dp"
+            android:layout_marginEnd="15dp"
+            android:layout_marginBottom="20dp"
+            android:background="@drawable/ic_settings" />
 
     </RelativeLayout>
 
