--- a/app/src/main/res/layout/fragment_my__shows.xml
+++ b/app/src/main/res/layout/fragment_my__shows.xml
@@ -1,48 +1,50 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/page_background">
 
-
-    <LinearLayout
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rv_downloads"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_marginTop="50dp" />
+
+
+    <LinearLayout
         android:id="@+id/ll_layout"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:orientation="vertical"
-        android:padding="30dp">
+        android:padding="30dp"
+        android:visibility="gone">
 
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginTop="200dp"
+            android:fontFamily="@font/inter_semibold"
             android:text="Download Shows"
             android:textColor="@color/selected"
-            android:textSize="20sp"
-            android:fontFamily="@font/inter_semibold"
-            android:layout_marginTop="200dp"/>
+            android:textSize="20sp" />
 
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginTop="5dp"
+            android:fontFamily="@font/inter_medium"
             android:text="Your Download Shows in currently empty"
             android:textColor="@color/unselected"
-            android:textSize="14sp"
-            android:fontFamily="@font/inter_medium"
-            android:layout_marginTop="5dp"/>
+            android:textSize="14sp" />
 
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:fontFamily="@font/inter_regular"
             android:text="Downloads Shows items will no longer appear in Explore, Progress and other sections."
             android:textColor="@color/unselected"
-            android:textSize="14sp"
-            android:fontFamily="@font/inter_regular"
-            android:layout_marginTop="10dp"/>
-
-
+            android:textSize="14sp" />
 
 
     </LinearLayout>
